@@ -18,7 +18,6 @@ MEDIUM
 LOW
 - slope tool rise/run can go off the graph for GTL challenges that don't manipulate slope (ie, "Set the y-Intercept", "Set the Point")
 - document CoordinateSpinnerNode constructor
-- implement RewardNode.setLevel so that we have unique rewards for each level
 - remove code related to SlopeEquationNode.PUT_UNSIMPLIFIED_SLOPE_ON_SEPARATE_LINE
 
 LOWEST
